--- a/index.html
+++ b/index.html
@@ -4,7 +4,35 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>anpw</title>
+    <title>Ananya Makwana | Portfolio</title>
+    <meta
+      name="description"
+      content="Portfolio of Ananya Makwana - Software Engineer, AI enthusiast, and builder of scalable systems."
+    />
+    <meta
+      name="keywords"
+      content="Ananya Makwana, Portfolio, Software Engineer, AI, Projects, Experience, Education"
+    />
+    <meta name="author" content="Ananya Makwana" />
+    <link rel="canonical" href="https://yourdomain.com/" />
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://yourdomain.com/" />
+    <meta property="og:title" content="Ananya Makwana | Portfolio" />
+    <meta
+      property="og:description"
+      content="Portfolio of Ananya Makwana - Software Engineer, AI enthusiast, and builder of scalable systems."
+    />
+    <meta property="og:image" content="/og-image.png" />
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://yourdomain.com/" />
+    <meta name="twitter:title" content="Ananya Makwana | Portfolio" />
+    <meta
+      name="twitter:description"
+      content="Portfolio of Ananya Makwana - Software Engineer, AI enthusiast, and builder of scalable systems."
+    />
+    <meta name="twitter:image" content="/og-image.png" />
   </head>
   <body>
     <div id="root"></div>
